# krunch

./: .dockerignore  .gitignore  ANALYSIS.md  CLAUDE.md  COMPARISON.md  COMPETITIVE_LANDSCAPE.md  COMPRESSION_OPTIMIZATION.md  CUSTOMER_PROFILE.md  DECISIONS.md  DISPATCHER_SIM_RESULTS.md  Dockerfile  HYBRID_CODEC_DESIGN.md  NOTICE  PHASE_0.md  PHASE_1.md  PHASE_11.md  PHASE_2.md  PHASE_2_5.md  PHASE_3.md  PHASE_4.md  PHASE_4C.md  PHASE_4D.md  PHASE_4E.md  PHASE_5.md  PHASE_6.md  PHASE_7.md  PHASE_8.md  PHASE_9.md  PRODUCTION_TODO.md  README.md  RUST_DISPATCHER_BENCH.md  SPIKE_1_LOG.md  SPIKE_2_LOG.md  SPIKE_2_PLAN.md  SPIKE_3_LOG.md  SPIKE_3_PLAN.md  SPIKE_4_LOG.md  SPIKE_4_PLAN.md  SPIKE_5_LOG.md  SPIKE_5_PLAN.md  (+10 more)
.github/workflows/: audit.yml  ci.yml  publish-image.yml  release.yml
bench/: README.md  bench.py  build_detection_corpus.py  build_v010_benchmark.py  compressors.py  detection_eval.json  detection_eval.md  detection_eval.py  detection_eval_findings.md  e2e_moe.py  specialist_benchmarks.py  v010_bt_and_zstd22.txt  vs_traditional.json  vs_traditional.md  vs_traditional.py  zstd_reference.json
bench/corpora/: README.md
bench/results/: enwik6-classical.json  enwik6-classical.md  enwik6-phase2-final.json  enwik6-phase2-final.md  enwik6-phase2.json  enwik6-phase2.md  enwik8-classical.json  enwik8-classical.md  enwik8-l3tc.md  l3tc-enwik6-baseline.json
cdk/: .gitignore  README.md  cdk.context.json  cdk.json  outputs.json  package-lock.json  package.json  tsconfig.json
cdk/docker/compression/: Dockerfile  compression_worker.py
cdk/docker/training/: Dockerfile  requirements.txt  train_entrypoint.sh
cdk/lib/: api-stack.ts  compression-stack.ts  ingest-stack.ts  queue-stack.ts  storage-stack.ts  training-stack.ts
cdk/lib/shared/: constants.ts
cdk/src/handlers/: get.ts  ingest.ts  put.ts  training-complete.ts  training-launcher.ts
cdk/src/shared/: ddb.ts  types.ts
deploy/: docker-compose.yml
deploy/aws-cdk/: README.md  cdk.context.json  package-lock.json  package.json  tsconfig.json
deploy/aws-cdk/lib/: krunch-stack.ts
docs/: ARCHIVE_l3tc.md  COMPARISON.md  DECISIONS.md  DETAILED_README.md  EVALUATION_GUIDELINES.md  INT8_WEIGHTS_DESIGN.md  OPTIMIZATIONS.md  PEER_CODEC_NOTES.md  SERVICE_ARCHITECTURE.md  SPEED_OPTIMIZATIONS.md  V3_KERNEL_DESIGN.md  phase_0_findings.md  phase_2_findings.md  phase_3_findings.md  phase_4b_findings.md  phase_4d_findings.md  phase_4e_findings.md
docs/phase-findings/: phase_11_findings.md  phase_4a_findings.md
docs/phases/: PHASE_0.md  PHASE_1.md  PHASE_10.md  PHASE_11.md  PHASE_12.md  PHASE_13.md  PHASE_14.md  PHASE_2.md  PHASE_2_5.md  PHASE_3.md  PHASE_4.md  PHASE_4C.md  PHASE_4D.md  PHASE_4E.md  PHASE_5.md  PHASE_6.md  PHASE_7.md  PHASE_8.md  PHASE_9.md
krunch/: batched_rwkv4.py  chunking.py  cli.py  cpp_path.py  inference.py  job.py  plan_cli.py  worker_pool.py
krunch/plan/: __init__.py
krunch/plan/templates/: aws_batch.json.j2  gcp_batch.json.j2  k8s.yaml.j2  local.sh.j2  modal.py.j2  ray.py.j2  slurm.sbatch.j2
krunch_ac/: __init__.py  cdf.py  cpu_reference.py  gpu_encode.py
krunch_ac/cuda/: decode_kernel.cu  det_matmul.cu  det_matmul_cublas.cu  det_matmul_tc.cu  det_matmul_tc_3way.cu  det_matmul_tc_3way_async.cu  det_matmul_tc_async.cu  det_matmul_tc_bf16.cu  det_matmul_tc_mw.cu  det_matmul_tc_uint8.cu  det_matmul_tc_v2.cu  det_matmul_tc_xl.cu  det_softmax_cdf.cu  encode_kernel.cu  fused_pre_attn.cu  layer_cpp.cpp  layer_norm.cu  main.cpp  mb_gemv.cu  premix_kernels.cu  range_coder.cuh  rwkv_step.cu  rwkv_step_v2.cu  rwkv_step_v3.cu  setup.py  wkv_kernel.cu
l3tc-rust/: Cargo.toml  README.md  build.rs  deny.toml  iter.sh
l3tc-rust/.cargo/: config.toml
l3tc-rust/fuzz/: Cargo.toml
l3tc-rust/fuzz/fuzz_targets/: fuzz_arithmetic_decoder.rs  fuzz_checkpoint_parse.rs  fuzz_decompress_header.rs
l3tc-rust/scripts/: convert_checkpoint.py
l3tc-rust/src/: arithmetic.rs  backend.rs  bitio.rs  checkpoint.rs  codec.rs  dispatcher.rs  error.rs  lib.rs  rwkv.rs  rwkv_v4_pile.rs  tensor.rs  tokenizer.rs  weights_rwkv.rs
l3tc-rust/src/backend/: batched.rs  cuda.rs  mod.rs  mtl.rs
l3tc-rust/src/cuda/: wkv.cu
l3tc-rust/tests/: end_to_end.rs  load_real_checkpoint.rs  profile_codec.rs  profile_forward.rs  real_model_forward.rs
models/: .gitkeep
scripts/: bench_bf16_vs_fp16.py  bench_cpp_chunk_throughput.py  bench_cpp_graphed.py  bench_cpp_packed.py  bench_decompress_at_b.py  bench_forward.py  bench_full_graph.py  bench_layer_cpp.py  bench_mb_gemv.py  bench_multichunk_worker_pool.py  bench_rwkv_step_v3.py  bench_step_kernel.py  bench_uint8_vs_fp16.py  bench_wmma_vs_scalar.py  build_corpus_v2.py  build_eval_suite.py  build_pile_corpus.py  build_real_corpus.py  build_training_corpus.py  calibrate_uint8_weights.py  compute_entropy.py  convert_rwkv_pth_to_safetensors.py  dev_batched_test.py  dev_compress_bench.py  dev_threaded_bench.py  diff_logits.py  distill_l3tc.py  download_corpora.sh  download_real_structured_data.py  dump_python_logits.py  entrypoint.sh  gpu_throughput_test.py  gpu_throughput_userdata.sh  krunch  krunch_cli.py  launch-ondemand.sh  launch-spot-fleet.sh  launch-spot-train.sh  launch_all_specialists.sh  measure_bt_and_zstd.py  (+90 more)
scripts/metal_wkv/: __init__.py  parity_check.py  wkv.metal  wkv_mps.mm
server/: chunking.py  cli.py  inference.py  main.py  orchestrator.py  url_io.py
tests/: README.md  gpu.sh  integration.sh  quick.sh  test_ac_gpu_path.py  test_ac_kernel_gpu.py  test_ac_reference.py  test_blob.py  test_plan.py  test_utf8_chunking.py
