[package]
name = "l3tc-rust"
version = "0.1.0"
edition = "2021"
description = "Production-ready Rust port of L3TC learned lossless text compression"
license = "Apache-2.0"
readme = "README.md"
keywords = ["compression", "neural", "rwkv", "lossless", "text"]
categories = ["compression"]

[lib]
name = "l3tc"
path = "src/lib.rs"

[[bin]]
name = "l3tc"
path = "src/bin/l3tc/main.rs"

[dependencies]
# Library-level typed errors
thiserror = "2.0"

# CLI + binary-level error handling
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

# Binary-safe file I/O
byteorder = "1.5"

# Memory-mapped file reads for large inputs (read-only, zero-copy)
memmap2 = "0.9"

# SIMD-optimized matmul. Same crate ndarray and burn use under the
# hood; pure Rust, SGEMM / DGEMM kernels tuned for x86 AVX/AVX2/AVX512
# and ARM NEON. Dramatically faster than a naive scalar matvec loop
# on the big (16384, 96) head projection.
matrixmultiply = "0.3"

# SentencePiece Rust bindings. Wraps the C++ library which must be
# installed on the system: `brew install sentencepiece` on macOS,
# `apt install libsentencepiece-dev` on Debian/Ubuntu, etc.
# We use SentencePiece directly (rather than tokenizers crate + JSON
# conversion) because L3TC ships SPM .model files and we want
# bit-identical tokenization for round-trip correctness.
sentencepiece = "0.11"

# Data parallelism for the head matvec. The head projection is the
# single biggest compute hotspot in the forward pass; splitting its
# output rows across CPU cores gives a 2-4x speedup with minimal
# code. rayon's thread pool warmup happens lazily on the first call
# and is amortized over the full file.
rayon = "1.10"

# Fast CRC32 for file format integrity checks (v3 format). Pure
# Rust, no transitive deps, auto-vectorizes via SIMD where available.
crc32fast = "1.4"

# --- install-models (task 27): binary-only deps ---
# Pure-Rust HTTP client with rustls (no OpenSSL). Blocking API, ~400 KB.
# Only used by the `install-models` CLI subcommand.
ureq = { version = "2.10", default-features = false, features = ["tls"], optional = true }

# Streaming .tar.zst extraction and SHA-256 hashing for bundle
# verification. All Apache-2.0 / MIT, no C deps.
tar = { version = "0.4", optional = true }
zstd = { version = "0.13", default-features = false, optional = true }
sha2 = { version = "0.10", optional = true }

# Manifest parsing. serde_json chosen over toml because the manifest
# is generated by the release workflow, not hand-edited. serde is a
# transitive dep already via other crates in the tree.
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# --- Phase 13: optional GPU backend ---
# Apple Metal bindings. Enabled only when the `metal` feature is
# active. CPU build is unaffected.
metal = { version = "0.29", optional = true }
objc2 = { version = "0.5", optional = true }
objc2-foundation = { version = "0.2", optional = true }

[dev-dependencies]
# Deterministic rng for tests
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

[features]
default = ["cli"]
# The CLI binary pulls in clap and anyhow plus the `install-models`
# machinery (HTTP + tar.zst + SHA-256). Library consumers who only
# want the compressor core don't pay for any of it.
cli = [
    "dep:clap",
    "dep:anyhow",
    "dep:ureq",
    "dep:tar",
    "dep:zstd",
    "dep:sha2",
    "dep:serde",
    "dep:serde_json",
]

# Phase 13: opt-in GPU backend via Apple Metal. CPU-only builds
# omit this entirely and have no GPU dependency. Enable with:
#     cargo build --release --features=metal
metal = ["dep:metal", "dep:objc2", "dep:objc2-foundation"]
# Convenience meta-feature for "the most featureful local backend";
# resolves to `metal` on Apple Silicon. Future: add `cuda` and
# extend this to pick automatically.
gpu = ["metal"]

# Lint policy. Applied by any `cargo clippy` or `cargo check` run,
# so developers catch the same issues locally that CI would block.
# Matches `.github/workflows/ci.yml`. Site-local `#[allow(...)]` is
# preferred over widening these for load-bearing cases (see the NEON
# polynomial coefficients in `src/tensor.rs` for an example).
[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 } # pedantic is opt-in per site

[profile.release]
opt-level = 3
# Thin LTO. Fat LTO was tried (Phase 12f) and gave equivalent
# throughput on this workload (memory-bandwidth bound at the head
# matvec). PGO was also attempted; rustc 1.94.1 + aarch64-apple-darwin
# has a regression where the LLVM value-profile instrumentation
# crashes the instrumented binary intermittently. Defer until a
# future rustc fixes it.
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = false

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
