[package]
name = "l3tc-rust-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.l3tc-rust]
path = ".."
# Disable the CLI feature — we only need the library for fuzzing.
default-features = false

# --- Fuzz targets ---

[[bin]]
name = "fuzz_checkpoint_parse"
path = "fuzz_targets/fuzz_checkpoint_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_arithmetic_decoder"
path = "fuzz_targets/fuzz_arithmetic_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decompress_header"
path = "fuzz_targets/fuzz_decompress_header.rs"
test = false
doc = false
bench = false
